fix(desktop): selected column top padding on small windows

--- a/packages/desktop/app/stylesheets/renderer.css
+++ b/packages/desktop/app/stylesheets/renderer.css
@@ -9,6 +9,10 @@
   transition: 0.15s padding ease;
 }
 
+.mac-desktop .app-column.selected {
+  padding-top: 18px;
+}
+
 @media screen and (min-width: 768px) {
   .mac-desktop #app.collapsed-notes.collapsed-navigation #editor-column {
     padding-top: 18px;
